--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
+        <a class="nav-link" href="https://sem2093.github.io/vanillajs/"> JavaScript Docs</a>
         <a class="nav-link" href="https://sem2093.github.io/apiproject/"> <i class="bi bi-database-fill"></i> API Project</a>
-        <a class="nav-link" href="https://sem2093.github.io/calendar/task.html"> <i  class="bi bi-card-checklist"></i>Task Manager</a>
         <a class="nav-link" href="https://sem2093.github.io/calculator/"><i class="bi bi-calculator-fill" ></i> Calculator</a>
-        <a class="nav-link" href="https://sem2093.github.io/calendar/"> <i class="bi bi-calendar-fill"></i> Calendar</a>    
+        <a class="nav-link" href="https://sem2093.github.io/calendar/"> <i class="bi bi-calendar-fill"></i> Calendar/Event Management </a>    
         <a class="nav-link" href="https://sem2093.github.io/react/"><i class="bi bi-filetype-jsx"></i> React Project</a>
         <a class="nav-link" href=""><i class="bi bi-filetype-py"></i>Harvard Python Course Work</a>
         </div>
@@ -58,11 +58,9 @@
 </nav>
       <!--card-->
 <div class="card shadow-lg border border-primary">
-  <img src="4DAD1A7C-F9EF-43F6-AB52-2006B34A7F29.jpeg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">JS Docs Project</h5>
     <p class="card-text">A minified and personalized version of JavaScript Documentation.</p>
-    <a href="#" class="btn btn-primary">View Project</a>
   </div>
 </div>
 <!--card-->
