--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
+        <a class="nav-link" href="https://sem2093.github.io/socialnetwork/"> Social Network</a>
         <a class="nav-link" href="https://sem2093.github.io/vanillajs/"> JavaScript Docs</a>
         <a class="nav-link" href="https://sem2093.github.io/apiproject/"> <i class="bi bi-database-fill"></i> API Project</a>
         <a class="nav-link" href="https://sem2093.github.io/calculator/"><i class="bi bi-calculator-fill" ></i> Calculator</a>
