--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
         <a class="nav-link" href="https://sem2093.github.io/apiproject/"> <i class="bi bi-database-fill"></i> API Project</a>
         <a class="nav-link" href="https://sem2093.github.io/calculator/"><i class="bi bi-calculator-fill" ></i> Calculator</a>
         <a class="nav-link" href="https://sem2093.github.io/calendar/"> <i class="bi bi-calendar-fill"></i> Calendar/Event Management </a>    
+        <a class="nav-link" href="http://stevemiller2.pythonanywhere.com"><i class="bi bi-filetype-py"> Python Flask App</a>
         <a class="nav-link" href="https://sem2093.github.io/react/"><i class="bi bi-filetype-jsx"></i> React Project</a>
-        <a class="nav-link" href=""><i class="bi bi-filetype-py"></i>Harvard Python Course Work</a>
+        <a class="nav-link" href=""><i class="bi bi-filetype-py"></i> Harvard Python Course Work</a>
         </div>
     </div>
   </div>
